<resources>
    <string name="app_name">Workout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">test</string>
    <string name="get_fit">Get Fit, Don\'t Quit</string>
    <string name="the_best_way">The best way to choose the best and versatile sports equipment individually for you</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="top_equipment">Top Equipment</string>
    <string name="search">Search</string>
    <string name="product_details">Product Details</string>
    <string name="chest_dumbbell_press">Chest Dumbbell Press</string>
    <string name="dumbbells">Dumbbells</string>
    <string name="desc1">An effective exercise for training chest muscles using dumbbells. \n    It allows you to diversify your workout and work on chest strength and volume.\n    Perform it by lying on your back on a bench. Take dumbbells in your hands, \n    raise them above your chest and slowly lower them down while bending your elbows. \n    Then, slowly raise the dumbbells back up.</string>
    <string name="chest_barbell_bench_press">Chest Barbell Bench Press</string>
    <string name="barbell">Barbell</string>
    <string name="desc2">An exercise with a barbell that activates the chest muscles and helps develop them. \n    It\'s excellent for mass-building and increasing strength.\n    Perform it by lying on a bench with a barbell over your chest. Lift the barbell, \n    straightening your arms, and slowly lower it to your chest. Then raise the barbell back up.</string>
    <string name="desc3">Chest workout on a specialized machine. It effectively isolates \n    chest muscles and helps shape strength and volume.\n    Sit in the machine, grasp the handles, and slowly squeeze them in front of you. \n    Then slowly return to the starting position.</string>
    <string name="desc4">An exercise for the abs and chest muscles. It helps strengthen the core \n    and improve the appearance of the chest and abdomen.\n    Lie on your back, bend your knees, and press your feet to the floor. \n    Place your hands behind your head or cross them on your chest. Lift your torso, \n    curling it forward, and return to the starting position.</string>
    <string name="desc5">Chest workout using a resistance band. Ideal for home workouts and strengthening chest muscles.\n    Attach the resistance band to a fixed support, grab the ends of the band, \n    and face away from the support. Extend your arms forward, contracting the chest muscles, \n    and slowly return to the starting position.</string>
    <string name="desc6">Dumbbell squats are an excellent exercise for leg development. \n    Take dumbbells in each hand, stand straight, with your feet shoulder-width apart. \n    Bend down while keeping your back straight, and slowly bend your knees to a 90-degree angle. \n    Then return to the starting position, completing 3-4 sets of 10-12 repetitions.</string>
    <string name="desc7">Leg press on a machine is a great leg exercise. \n    Sit in the machine and place your feet on the platform at shoulder level. \n    Release the handles and slowly bend your legs, lowering the platform towards you. \n    Then slowly straighten your legs. Perform 3-4 sets of 10-12 repetitions.</string>
    <string name="desc8">Dumbbell lunges are an excellent exercise for leg development. \n    Take dumbbells in each hand and stand straight. Take a large step forward \n    and lower yourself, bending both knees to a 90-degree angle. Then return to the starting position. \n    Perform 3-4 sets of 10-12 repetitions per leg.</string>
    <string name="desc9">Leg extension on a machine is an exercise for quadriceps development. \n    Sit in the machine and place your legs under the pads. \n    Slowly lift your legs, straightening them completely. Then slowly lower them. \n    Perform 3-4 sets of 10-12 repetitions.</string>
    <string name="desc10">Dead lift is a powerful exercise for legs and the back. \n    Stand in front of the barbell with your feet shoulder-width apart. \n    Bend your back, lean forward, and grab the barbell with your hands shoulder-width apart. \n    Lift the barbell while straightening your back. Then slowly lower the barbell. \n    Perform 3-4 sets of 8-10 repetitions.</string>
    <string name="desc11">An effective exercise for training the back and upper body. \n    It helps develop back and bicep strength. To perform pull-ups, \n    grip a horizontal bar with your hands wide apart and slowly pull yourself up, \n    bending your elbows. Then, slowly lower yourself down.</string>
    <string name="desc12">An exercise for developing the back, glutes, and lower back. \n    It\'s excellent for strengthening the core and increasing strength. \n    The deadlift is performed with a barbell, which you need to lift from the floor \n    and lower back down while maintaining a straight back.</string>
    <string name="desc13">Back workout using a cable pulldown machine. \n    This exercise focuses on the latissimus dorsi, back, and biceps muscles. \n    While sitting on the machine, pull the upper cable bar down to your chest, \n    bending your elbows, and then slowly extend your arms.</string>
    <string name="desc14">An exercise for training the lower back and glutes. \n    It helps strengthen the back and prevent lower back pain. \n    While lying on the hyperextension machine, raise yourself up, \n    bending at the waist, and then slowly lower yourself down.</string>
    <string name="desc15">An exercise for training the upper back and deltoid muscles. \n    It is performed standing with a forward bend, lifting the barbell to the abdomen. \n    It effectively develops back strength and endurance.</string>
    <string name="desc16">An exercise for training the shoulder muscles and front deltoids. \n    Standing with a barbell on your chest, lift it above your head, \n    extending your arms. The barbell shoulder press develops shoulder strength and shape.</string>
    <string name="desc17">An exercise for developing shoulder muscles and the middle deltoid. \n    Standing with dumbbells in hand, lift them above your head. \n    It effectively works on shoulder strength and size.</string>
    <string name="desc18">An exercise for developing the lateral deltoid shoulder muscle. \n    Standing with dumbbells in hand, raise them to shoulder level. \n    It effectively shapes the shoulders and makes them wider.</string>
    <string name="desc19">An exercise for training the upper part of the shoulder and trapezius muscles. \n    Standing with a barbell, pull it toward your chin, bending your elbows. \n    It helps develop strength in the upper body.</string>
    <string name="desc20">An exercise for developing the lateral deltoid shoulder muscle. \n    While standing, raise dumbbells out to the sides to shoulder height. \n    It effectively shapes the shoulders and makes them wider.</string>
    <string name="desc21">An exercise for training the upper arms and back. \n    Hanging from a pull-up bar, lift your body upward until your shoulders touch the bar. \n    It\'s excellent for developing back and bicep strength.</string>
    <string name="desc22">An exercise for developing chest muscles and triceps. \n    Lie on the floor and push your body up from it. \n    It effectively works on arm strength and endurance.</string>
    <string name="desc23">An exercise for training the biceps. \n    Standing with dumbbells in hand, slowly bend your arms, \n    lifting the dumbbells to your shoulders. Helps shape the biceps.</string>
    <string name="desc24">An exercise for tricep training. \n    Sitting at the machine, press the handle down, straightening your arms. \n    It effectively isolates and strengthens the triceps.</string>
    <string name="desc25">An exercise for developing the triceps. \n    While seated at the machine, extend your arms downward. \n    It helps shape strong triceps.</string>
    <string name="chest_machine_press">Chest Machine Press</string>
    <string name="machine">Machine</string>
    <string name="crunches">Crunches</string>
    <string name="none">None</string>
    <string name="chest_band_fly_s">Chest Band Fly\'s</string>
    <string name="resistance_band">Resistance Band</string>
    <string name="dumbbell_squats">Dumbbell Squats</string>
    <string name="leg_press_on_machine">Leg Press on Machine</string>
    <string name="dumbbell_lunges">Dumbbell Lunges</string>
    <string name="leg_extension_on_machine">Leg Extension on Machine</string>
    <string name="dead_lift">Dead lift</string>
    <string name="pull_ups">Pull-Ups</string>
    <string name="bar">Bar</string>
    <string name="lat_pull_down">Lat Pull down</string>
    <string name="hyper_extension">Hyper extension</string>
    <string name="bent_over_barbell_row">Bent Over Barbell Row</string>
    <string name="barbell_shoulder_press">Barbell Shoulder Press</string>
    <string name="standing_dumbbell_press">Standing Dumbbell Press</string>
    <string name="lateral_raises_with_dumbbells">Lateral Raises with Dumbbells</string>
    <string name="upright_rows_with_barbell">Upright Rows with Barbell</string>
    <string name="dumbbell_lateral_raises">Dumbbell Lateral Raises</string>
    <string name="pull_up_bar">Pull-Up Bar</string>
    <string name="push_ups">Push-Ups</string>
    <string name="floor">Floor</string>
    <string name="hammer_curls">Hammer Curls</string>
    <string name="triceps_press">Triceps Press</string>
    <string name="arm_extensions">Arm Extensions</string>
</resources>